force-app/main/default/objects/Cabinet_Equipment__c/Cabinet_Equipment__c.object-meta.xml
<CustomObject>
    <description>For details on Customer Equipment located inside the Cabinets that the license from us.</description>
    <label>Cabinet Equipment</label>
    <nameField>
        <label>Cabinet Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cabinet Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>