force-app/main/default/objects/Cabinet_Equipment__c/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <description>The Cabinet that this Equipment is installed in.</description>
    <label>Cabinet</label>
    <referenceTo>DC_Cabinet__c</referenceTo>
    <relationshipLabel>Cabinet Equipment</relationshipLabel>
    <relationshipName>Cabinet_Equipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>