force-app/main/default/objects/Cabinet_Equipment__c/fields/Equipment_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Manufacturer__c</fullName>
    <description>Manufacturer of the Equipment.</description>
    <inlineHelpText>Manufacturer of the Equipment.</inlineHelpText>
    <label>Equipment Manufacturer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>