force-app/main/default/objects/Cabinet_Equipment__c/fields/Height_RU__c.field-meta.xml
<CustomField>
    <fullName>Height_RU__c</fullName>
    <description>Height of this Equipment in Rack Units.</description>
    <inlineHelpText>Height of this Equipment in Rack Units.</inlineHelpText>
    <label>Height (RU)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>