force-app/main/default/objects/Cabinet_Equipment__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <description>Equipment Manufacturer&apos;s Product/Equipment ID to identify the product.</description>
    <inlineHelpText>Equipment Manufacturer&apos;s Product/Equipment ID to identify the product.</inlineHelpText>
    <label>Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>