force-app/main/default/objects/Cabinet_Equipment__c/fields/Starting_Position_RU__c.field-meta.xml
<CustomField>
    <fullName>Starting_Position_RU__c</fullName>
    <description>Starting Position of this Panel in the Rack. 1 is the bottom RU.</description>
    <inlineHelpText>Starting Position of this Panel in the Rack. RU1 is the bottom RU. A Starting Position (RU) value of 1 and a Height (RU) value of 3 would mean this Equipment occupies RU1, RU2 and RU3.</inlineHelpText>
    <label>Starting Position (RU)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>