force-app/main/default/objects/Cabinet_Equipment__c/fields/Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_lbs__c</fullName>
    <description>Weight of this Equipment in pounds.</description>
    <inlineHelpText>Weight of this Equipment in pounds.</inlineHelpText>
    <label>Weight (lbs)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>